# janux-cxx

./: CMakeLists.txt  README.md
include/: core.hpp  drawable.hpp  engine.hpp  file.hpp  janux.hpp  matrix.hpp  renderer.hpp  shader.hpp  texture.hpp  transform.hpp  vector.hpp  vertex.hpp  window.hpp
src/: drawable.cxx  engine.cxx  file.cxx  matrix.cxx  renderer.cxx  shader.cxx  texture.cxx  transform.cxx  vector.cxx  vertex.cxx  window.cxx
